--- a/zip-search/src/App.css
+++ b/zip-search/src/App.css
@@ -4,3 +4,48 @@
   color: white;
   text-align: center;
 }
+
+#not-found {
+  margin-top: 50px;
+  text-align: center;
+}
+
+li {
+  text-align: left;
+}
+
+label {
+  font-weight: bold;
+}
+
+input {
+  border-radius: 7px;
+  border-width: 1px;
+  height: 40px;
+  border-color: lightgray;
+}
+
+#search-box 
+{
+  text-align: center;
+  margin-top: 50px;
+}
+
+.city-info
+{
+  text-align: center;
+  margin: 50px 300px;
+  border: solid 2px;
+  border-color: lightgray;
+  border-radius: 7px;
+}
+
+.cityName 
+{
+  font-size: 20px;
+  text-transform: capitalize;
+  background-color: lightgray;
+  color: black;
+  /* margin-bottom: 20px; */
+  padding: 10px;
+}
